GRADE.txt
* Did you use the GitHub user profile you provided in the first assignment? Yes
* Did you properly agree to the academic integrity statement? Yes
* Does the assignment contain the required files? Yes
* Does the Python program src/antiprime.py runs without errors? No
* Does the Python program src/antiprime.py identifies anti-prime and non-anti-prime numbers correctly? No
* Does the Python program src/antiprime.py passes all autograding tests? No
* Was the assignment submitted on time: Yes (last commit on Tue Oct 22 22:56:17 2024)

If the first question is negatively answered, a penalty of -1 points will be applied.
If the second question is negatively answered, the whole mark is 0.
The third question adds up 1 point to the grade.
The fourth question adds up 2 point to the grade.
The fifth question adds up 5 points to the grade.
The sixth question adds up 2 points to the grade.

Grade: 1

El programa 'antiprime.py' dona el següent error al intentar-lo executar tal i
com especifica l'enunciat de l'exercici:

$ python src/antiprime.py 6
  File "src/antiprime.py", line 17
    while l >= 1 :
                 ^
IndentationError: unindent does not match any outer indentation level

L'error és causat per una identació errònia a la línia 17 que col.loca la
instrucció 'while' que en aquella línia comença fora del bloc de codi al qual
pertany. Inclús si arreglem aquest error, el programa tampoc inclou les
instruccions necessàries per tal de que comprovi un número que li poguem
passar a través de la línia de comandes del shell del Unix.
